--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shanid - Data Scientist Portfolio</title>
+  <title>Muhammed Zalzameen - Data Scientist Portfolio</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -15,8 +15,8 @@
         <i class="fas fa-moon"></i>
       </div>
       <img src="https://via.placeholder.com/150" alt="Shanid" class="profile-img">
-      <h1>Shanid</h1>
-      <p>Aspiring Data Scientist | MCA Student</p>
+      <h1>Muhammed Zalzameen</h1>
+      <p>Data Scientist | MCA Student</p>
     </div>
   </header>
 
@@ -26,7 +26,7 @@
       <h2>About Me</h2>
       <hr class="section-hr">
       <p>
-        Hi, I'm Shanid, a passionate MCA student with a strong interest in data science and machine learning. 
+        Hi, I'm Zalzameen, a passionate MCA student with a strong interest in data science and machine learning. 
         I enjoy working with data to uncover insights and build predictive models. I'm skilled in Python, Excel, Keras, Django, Scikit-learn, and Tableau. 
         I'm currently looking for opportunities to apply my knowledge in real-world projects.
       </p>
