--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Dewi</h1>
+        <h1 class="sitename"> M M K </h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -216,9 +216,9 @@
                   <i class="bi bi-activity"></i>
                 </div>
                 <a href="service-details.html" class="stretched-link">
-                  <h3>Nesciunt Mete</h3>
+                  <h3>Integrity</h3>
                 </a>
-                <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis.</p>
+                <p>With a commitment to excellence, we tackle every challenge head-on, ensuring thorough execution and optimal results for every client.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -233,9 +233,10 @@
                   <i class="bi bi-broadcast"></i>
                 </div>
                 <a href="service-details.html" class="stretched-link">
-                  <h3>Eosle Commodi</h3>
+                  <h3>ANASMA</h3>
                 </a>
-                <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+                <p>We are dedicated to delivering clear, efficient solutions that address challenges with precision and expertise.
+                  Our unwavering commitment to integrity ensures that every solution is executed with the highest standards of excellence, regardless of complexity</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -250,9 +251,9 @@
                   <i class="bi bi-easel"></i>
                 </div>
                 <a href="service-details.html" class="stretched-link">
-                  <h3>Ledo Markt</h3>
+                  <h3>MALAVIKA</h3>
                 </a>
-                <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
+                <p>Elevating your online presence with custom web development tailored to your specific needs and goals.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
